Updating after feedback.  Fixing the Header and Form not wrapping.  Added flex-wrap: wrap; to both so they now wrap based on the page size changing.

--- a/style.css
+++ b/style.css
@@ -147,18 +147,20 @@ footer p {
 
 /* -------  Media Query ------- */
 
-@media all and (min-width: 480px) {
+@media only screen and (min-width: 480px) {
   header {
     padding: 20px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-wrap: wrap;
   }
 
   form {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-wrap: wrap;
   }
 
   .searchlist {
